<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3949AB"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cvHomeCitySummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-33dp"
        app:cardBackgroundColor="#E7EEF1"
        app:cardCornerRadius="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDayOfWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="GCU Campus Weather App"
                android:textSize="30sp" />



            <LinearLayout
                android:id="@+id/lvHomeCityWInfo"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivWeather"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/sunny_intervals" />

                <LinearLayout
                    android:id="@+id/lv3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Name: Jules Maurice Mulisa"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="GCU Matric Number: S1719024"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvVisib"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Major: Computing"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="Tap on City name below to view its weather info"
                android:textColor="#3949AB"
                android:textSize="18sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:id="@+id/svCities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cvGlasgow"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                card_view:cardElevation="20dp"
                app:cardBackgroundColor="#3949AB"
                app:cardCornerRadius="7dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:tag="Glasgow, GB"
                    android:text="@string/glasgow_gb"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvOman"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                app:cardBackgroundColor="#3949AB"
                app:cardCornerRadius="7dp"
                card_view:cardElevation="20dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:tag="Muscat, OM"
                    android:text="@string/muscat_om"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvLondon"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                card_view:cardElevation="20dp"
                app:cardBackgroundColor="#3949AB"
                app:cardCornerRadius="7dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:tag="London, GB"
                    android:text="@string/london_gb"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvNY"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                card_view:cardElevation="20dp"
                app:cardBackgroundColor="#3949AB"
                app:cardCornerRadius="7dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:tag="New York, US"
                    android:text="@string/new_york_us"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvMauritius"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                card_view:cardElevation="20dp"
                app:cardBackgroundColor="#3949AB"
                app:cardCornerRadius="7dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:tag="Port Louis, MU"
                    android:text="@string/port_louis_mu"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvBangladesh"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                card_view:cardElevation="20dp"
                app:cardBackgroundColor="#3949AB"
                app:cardCornerRadius="7dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:tag="Dhaka, BD"
                    android:text="@string/dhaka_bd"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvRwanda"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                card_view:cardElevation="20dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#3949AB"
                app:cardCornerRadius="7dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:tag="Kigali, RW"
                    android:text="@string/kigali_rw"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>