<?xml version="1.0" encoding="utf-8"?>

<!--

*
 * Student Name: Jules Maurice Mulisa
 * Student ID: S1719024
 * Email: JMULIS200@caledonian.ac.uk
 *

-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3949AB"
    android:orientation="vertical"
    tools:context=".DetailFrag">

    <!---->


    <android.support.v7.widget.CardView
        android:id="@+id/cvDetails"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="-33dp"
        app:cardBackgroundColor="#E7EEF1"
        app:cardCornerRadius="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDayOfWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textSize="30sp" />


            <LinearLayout
                android:id="@+id/lvHomeCityWInfo"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivWeather"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/weatherImageDescritpion"
                    app:srcCompat="@drawable/light_cloud" />

                <LinearLayout
                    android:id="@+id/lv3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvMaxTemp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:gravity="center"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvMinTemp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        tools:text="temperature" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tvDetailDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/tvSelectToView"
        android:textColor="#ffffff"
        android:textSize="24sp"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWindSpeed"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvPressure"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvWindDirection"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSunRise"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSunSet"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvHumid"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvVisib"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDetailMatric"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/matric"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>